# nemahaizai

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.css  main.ts  titlebar.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_file.rs  main.rs  ncm2mp3.rs
src/components/: Greet.vue  Header.vue  Main.vue
src/i18n/en/: en.json
src/i18n/zh-hans/: zh-hans.json
src/pages/: bpmDetect.vue  index.vue  options.vue
