[package]
name = "nemahaizai"
version = "0.1.0"
description = "A Tauri App"
authors = ["Vincent-the-gamer <https://github.com/Vincent-the-gamer>"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
